--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ li a, .dropbtn {
 }
 
 li a:hover, .dropdown:hover .dropbtn {
-    background-color: red;
+    background-color: #000000;
 }
 
 li.dropdown {
